<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_products"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/products" />

    <item
        android:id="@+id/nav_cart"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/cart" />

    <item
        android:id="@+id/nav_orders"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/my_orders" />

    <item
        android:id="@+id/nav_account"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/account" />
</menu>
